completed flex config

--- a/concerts-config.yml
+++ b/concerts-config.yml
@@ -350,7 +350,7 @@ scrapers:
   #########
   - name: Flex
     url: "http://flex.at/flex_frontend/index.php?selected=programm"
-    item: "#programmWatchList .overview tr"
+    item: "#programmWatchList .overview tr table"
     fields:
       static:
         - name: "location"
@@ -366,6 +366,31 @@ scrapers:
           location:
             selector: ".watchListInfo a"
             child_index: 2
+        - name: "comment"
+          location:
+            selector: ".contentBoldYellow"
+        - name: "url"
+          type: "url"
+          location:
+            selector: ".watchListInfo a"
+        - name: "date"
+          type: "date"
+          components:
+            - covers:
+                day: true
+                month: true
+                year: true
+              location:
+                selector: ".contentBoldWhite a"
+              layout: ["02.01.2006"]
+            - covers:
+                time: true
+              location:
+                selector: ".watchListInfo a"
+                regex_extract:
+                  exp: "[0-9]{2}:[0-9]{2}"
+              layout: ["15:04"]
+          date_location: "Europe/Berlin"
 
   #########
   # Zurich
