--- a/concerts-config.yml
+++ b/concerts-config.yml
@@ -483,3 +483,49 @@ scrapers:
               layout: ["15Uhr04"]
           date_location: "Europe/Berlin"
           date_language: "de_DE"
+
+  - name: Komplex457
+    url: "https://komplex-457.ch/event/"
+    item: ".portfolio"
+    fields:
+      static:
+        - name: "location"
+          value: "Komplex457"
+        - name: "city"
+          value: "Zurich"
+        - name: "type"
+          value: "concert"
+        - name: "sourceUrl"
+          value: "https://komplex-457.ch/event/"
+      dynamic:
+        - name: "title"
+          location:
+            selector: ".av-masonry-entry-title"
+        - name: "url"
+          type: "url"
+          location:
+            selector: ""
+        - name: "date"
+          type: "date"
+          on_subpage: "url"
+          components:
+            - covers:
+                day: true
+                month: true
+                year: true
+              location:
+                selector: ".iconbox_content_container p"
+                node_index: 0
+                entire_subtree: true
+                regex_extract:
+                  exp: "[0-9]{2}\\.[0-9]{2}\\.[0-9]{4}"
+              layout: ["02.01.2006"]
+            - covers:
+                time: true
+              location:
+                selector: ".iconbox_content_container p"
+                node_index: 3
+                regex_extract:
+                  exp: "[0-9]{1,2}:[0-9]{2}"
+              layout: ["15:04"]
+          date_location: "Europe/Berlin"
