--- a/concerts-config.yml
+++ b/concerts-config.yml
@@ -537,96 +537,21 @@ scrapers:
     fields:
       static: []
       dynamic:
-        - name: field-0
-          type: text
+        - name: title
           location:
             selector: div.nu-e-innerwrap > div.nu-e-mobitop > div.nu-e-titleblock > h2
-            node_index: 0
-            child_index: 0
-            regex_extract:
-              exp: ""
-              index: 0
-            attr: ""
-            max_length: 0
-            entire_subtree: false
-          on_subpage: ""
-          can_be_empty: false
-          components: []
-          date_location: ""
-          date_language: ""
-          hide: false
-        - name: field-1
-          type: text
+        - name: monthTmp
           location:
             selector: div.nu-e-innerwrap > div.nu-e-mobitop > div.nu-e-date.icon-e-date > span > span
-            node_index: 0
-            child_index: 0
-            regex_extract:
-              exp: ""
-              index: 0
-            attr: ""
-            max_length: 0
-            entire_subtree: false
-          on_subpage: ""
-          can_be_empty: false
-          components: []
-          date_location: ""
-          date_language: ""
-          hide: false
-        - name: field-2
-          type: text
+        - name: dayTmp
           location:
             selector: div.nu-e-innerwrap > div.nu-e-mobitop > div.nu-e-date.icon-e-date > span
-            node_index: 0
-            child_index: 0
-            regex_extract:
-              exp: ""
-              index: 0
-            attr: ""
-            max_length: 0
-            entire_subtree: false
-          on_subpage: ""
-          can_be_empty: false
-          components: []
-          date_location: ""
-          date_language: ""
           hide: false
-        - name: field-3
+        - name: comment
           type: text
           location:
             selector: div.nu-e-innerwrap > div.nu-e-mobidetails > div.nu-e-shortdescription > p > strong
-            node_index: 0
-            child_index: 0
-            regex_extract:
-              exp: ""
-              index: 0
-            attr: ""
-            max_length: 0
-            entire_subtree: false
-          on_subpage: ""
           can_be_empty: true
-          components: []
-          date_location: ""
-          date_language: ""
-          hide: false
-        - name: field-4
-          type: text
-          location:
-            selector: div.nu-e-innerwrap > div.nu-e-mobidetails > div.nu-e-shortdescription > p
-            node_index: 0
-            child_index: 0
-            regex_extract:
-              exp: ""
-              index: 0
-            attr: ""
-            max_length: 0
-            entire_subtree: false
-          on_subpage: ""
-          can_be_empty: true
-          components: []
-          date_location: ""
-          date_language: ""
-          hide: false
     filters: []
     paginator:
       location:
