--- a/config-gen.yml
+++ b/config-gen.yml
@@ -1,18 +1,27 @@
 scrapers:
-  - name: "Luxor"
-    url: https://www.luxor-koeln.de/programm/
-    item: body.page-template.page-template-page-events.page-template-page-events-php.page.page-id-26.wp-embed-responsive.preload > main.content > article.article.post-26.page.type-page.status-publish.hentry > section.events-overview.alignwide > div.events-overview__listing > article.event-sneak-peek.event.type-event.status-publish.has-post-thumbnail.hentry
+  - name: "Reduta"
+    url: http://www.redutajazzclub.cz/program-en
+    item: body > div.container.frontpage > div.row.textpage.programpage > div.col.s12.row.nopadding > div.row.bookingList > div.doubleprog.col.row.s12.hl2 > div.progitem.col.s12.row > div.col.s12.row
     fields:
       dynamic:
         - name: field-0
           type: text
           location:
-            selector: div.event-sneak-peek__meta > div.event-sneak-peek__time
+            selector: div.col.program > div.progheader > a
         - name: field-1
-          type: text
+          type: url
           location:
-            selector: div.event-sneak-peek__meta > div.event-sneak-peek__date
+            selector: div.col.program > div.progheader > a
+            attr: href
         - name: field-2
           type: text
           location:
-            selector: div.event-sneak-peek__content > h3.event-sneak-peek__title > a
+            selector: div.col.program > div.progaddtext > p
+        - name: field-3
+          type: text
+          location:
+            selector: div.col.datum > div.time
+        - name: field-4
+          type: text
+          location:
+            selector: div.col.datum > div.date
