--- a/.github/workflows/go-tests.yml
+++ b/.github/workflows/go-tests.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ["1.18", "1.19"]
+        go-version: ["1.22"]
 
     steps:
       - uses: actions/checkout@v4
