--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -33,12 +33,18 @@ jobs:
       fail-fast: false
       matrix:
         language: ["go"]
+        go-version: ["1.22"]
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby' ]
         # Learn more about CodeQL language support at https://git.io/codeql-language-support
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Setup Go ${{ matrix.go-version }}
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go-version }}
 
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
@@ -66,5 +72,5 @@ jobs:
       #   make bootstrap
       #   make release
 
-      - name: Perform CodeQL Analysi2
+      - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
